force-app/main/default/objects/Lead/fields/Jataka_Approval_Tier__c.field-meta.xml
<CustomField>
  <fullName>Jataka_Approval_Tier__c</fullName>
  <label>Jataka Approval Tier</label>
  <required>true</required>
  <type>Picklist</type>
  <valueSet>
    <restricted>true</restricted>
    <valueSetDefinition>
      <value>
        <fullName>Bronze</fullName>
        <default>true</default>
        <label>Bronze</label>
      </value>
      <value>
        <fullName>Silver</fullName>
      </value>
      <value>
        <fullName>Gold</fullName>
      </value>
    </valueSetDefinition>
  </valueSet>
</CustomField>