force-app/main/default/objects/Lead/fields/Jataka_Status__c.field-meta.xml
<CustomField>
  <fullName>Jataka_Status__c</fullName>
  <label>Jataka Status</label>
  <required>true</required>
  <type>Picklist</type>
  <valueSet>
    <restricted>true</restricted>
    <valueSetDefinition>
      <value>
        <fullName>New</fullName>
        <default>true</default>
        <label>New</label>
      </value>
      <value>
        <fullName>Contacted</fullName>
      </value>
      <value>
        <fullName>Disqualified</fullName>
      </value>
    </valueSetDefinition>
  </valueSet>
</CustomField>